@@ -212,6 +212,7 @@ if (encryption)
 		FIND_PACKAGE(OpenSSL REQUIRED)
 	endif()
 	add_definitions(-DTORRENT_USE_OPENSSL)
+	add_definitions(-DTORRENT_USE_LIBCRYPTO)
 	include_directories(${OPENSSL_INCLUDE_DIR})
 else()
 	add_definitions(-DTORRENT_DISABLE_ENCRYPTION)
