@@ -1,3 +1,4 @@
+	* separated ssl and crypto options in build
 	* remove lazy-bitfield feature
 	* simplified suggest-read-cache feature to not depend on disk threads
 	* removed option to disable contiguous receive buffers
